--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "api": "^5.0.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "json-schema-to-ts": "^2.8.1"
   }
 }
